# roles_royce

./: .dockerignore  .gitignore  LICENSE  MANIFEST.in  README.md  hardhat.config.js  package-lock.json  package.json  playground.py  pyproject.toml  requirements-dev.txt  requirements-freeze.sh  requirements.txt
.github/scripts/: build_and_push.sh
.github/workflows/: ci.yml  docker.yaml  json-update.yml  stresstest.yml
artemis/: constants.py  evm_utils.py  generic_method.py  roles.py  roles_modifier.py
artemis/applications/: utils.py
artemis/protocols/: base.py  utils.py
artemis/protocols/eth/: aave_v2.py  (+8 more)
defabipedia/: __init__.py  types.py
defabipedia/_1inch/: __init__.py
defabipedia/aave_v3/: ABPT.json  __init__.py  aEthWETH.json  paraswap_repay_adapter.json  stableDebtWETH.json  stkABPT.json  variableDebtWETH.json
defabipedia/aura/: __init__.py  base_reward_pool.json  booster.json
defabipedia/balancer/: __init__.py  cc_liquidity_gauge_factory.json  composable_stable_pool.json  liquidity_gauge_factory.json  stable_pool.json
defabipedia/cowswap_signer/: __init__.py  cowswap_signer.json
defabipedia/lido/: __init__.py
defabipedia/maker/: __init__.py  dai_join.json  gem_join.json  proxy_actions.json
defabipedia/rocket_pool/: __init__.py  protocol_settings_deposit.json  swap_router.json
defabipedia/spark/: __init__.py
defabipedia/tokens/: __init__.py
defabipedia/xDAI_bridge/: __init__.py  bridge_interest_receiver.json  xdai_bridge.json
docker/: Dockerfile  Dockerfile.api  Dockerfile.bots  Dockerfile.eur  Dockerfile.keeper  Dockerfile.spark  Dockerfile.spark_liquidation_bot
docs/: api.rst  conf.py  generic_calls.rst  index.rst  protocols.rst  requirements.txt
docs/_ext/: autodoc_method.py
docs/_static/: custom.css
docs/protocols/: aave_v2.rst  aura.rst  balancer.rst  compound_v2.rst  compound_v3.rst  index.rst  lido.rst  makerdao.rst  spark.rst
roles_royce/: __init__.py  abi_utils.py  abis_utils.py  constants.py  evm_utils.py  generic_method.py  operations.py  roles.py  roles_modifier.py  utils.py  utils_playground.py
roles_royce/addresses_and_abis/: __init__.py
roles_royce/applications/: EURe_bot.py  bots_requirements.txt  requirements-apps.txt  requirements-freeze.sh  requirements.txt  run_app.sh  run_bot.sh  spark_anti_liquidation.py  utils.py
roles_royce/protocols/: __init__.py  aave_v3.py  base.py  utils.py
rolling_roles/: constants.py  generic_method.py  operations.py  roles_modifier.py  utils.py
rolling_roles/protocols/: base.py
tests/: _test_balancer_vebal.py  _test_maker_fork.py  conftest.py  fork_fixtures.py  fork_utils.py  package-lock.json  roles.py  roles_utils.py  safe.py  test_aave.py  test_aave_v2.py  test_aave_v3.py  test_aura.py  test_balancer.py  test_balancer_send.py  test_clients_payload.py  test_compound_v2.py  test_compound_v3.py  test_contract_method.py  test_cowswap_signer.py  test_evm_utils.py  test_lido.py  test_maker.py  test_makerdao.py  test_operations.py  test_playground.py  test_rocket_pool.py  test_roles_modifier.py  test_safe_and_roles.py  test_spark.py  test_tenderly_simulation.py  test_utils.py  utils.py
tests/anti_liquidation/: test_anti_liquidation_spark.py  test_spark.py
tests/development/: _test_balancer_vebal.py  _test_maker.py  _test_maker_fork.py  _test_maker_proxy.py  _test_quoter_balancer_mine.py
tests/protocols/: test_utils.py
transaction_builder/: roles.py
transaction_builder/applications/: utils.py
(+412 files in other folders)
