[build-system]
requires = ["setuptools>=65.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "RolesRoyce"
version = "0.0.1"
description = "Create and execute DeFi transactions through the Roles Modifier contracts"
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.10"
authors = [
    { name = "karpatkey", email = "info@karpatkey.com" },
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "safe-eth-py>=5.3.1",
    "web3>=6.6,<7.0",
    "pydantic>=2.5.0,<3.0",
    "requests>=2.31.0,<3.0",
    "python-decouple>=3.8"
]

[project.urls]
Homepage = "https://github.com/KarpatkeyDAO/rolling-roles"

[tool.setuptools.packages.find]
include = ["roles_royce*", ]
namespaces = false
