[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "rolesroyce"
dynamic = ["version"]
description = "Create and execute DeFi transactions through the Roles Modifier contracts"
readme = "README.md"
license = { text = "MIT License" }
requires-python = ">=3.10"
authors = [{ name = "karpatkey", email = "info@karpatkey.com" }]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]

dependencies = [
  "safe-eth-py>=5.3.1",
  "web3>=6.6,<7.0",
  "pydantic>=2.5.0,<3.0",
  "requests>=2.31.0,<3.0",
  "python-decouple>=3.8",
  'karpatkit @ git+https://github.com/karpatkey/karpatkit.git@v0.0.20',
]

[project.urls]
Homepage = "https://github.com/karpatkey/roles_royce"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["roles_royce"]

# Linter configuration.
[tool.isort]
profile = "black"
atomic = true
line_length = 120

[tool.black]
line-length = 120

[tool.flake8]
extend-exclude = ['.git', '__pycache__']
extend-ignore = ['E203', 'E266', 'E501', 'W605', 'W503']
max-line-length = 120
max-complexity = 18
# Specify the list of error codes you wish Flake8 to report.
select = ['B', 'C', 'E', 'F', 'W', 'T4', 'B9']
# Parallelism
jobs = 4
